--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>React App</title>
+  <title>Olee's Portfolio</title>
 </head>
 
 <body>
@@ -33,6 +33,7 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
+
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -43,6 +44,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
 </body>
 
 </html>
